--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- Display the countdown timer in an element -->
-<p id="demo"></p>
+<p id="demo"><fontsize="24">Countdown Timer to Ade's Holiday...</fontsize></p>
 
 <script>
 // Set the date we're counting down to
