--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- Display the countdown timer in an element -->
-<p id="title"><fontsize="24">Countdown Timer to Ade's Holiday...</fontsize></p>
+<p id="title">Countdown Timer to Ade's Holiday...</p>
 <p id="demo"></p>
 
 <script>
