--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- Display the countdown timer in an element -->
-<p id="title">Countdown Timer to Ade's Holiday...</p>
+<p id="title"><font size="48">Countdown Timer to Ade's Holiday...</font></p>
 <p id="demo"></p>
 
 <script>
@@ -16,13 +16,14 @@ var x = setInterval(function() {
   var distance = countDownDate - now;
 
   // Time calculations for days, hours, minutes and seconds
-  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+  // var days = Math.floor(distance / (1000 * 60 * 60 * 24));
   var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
   var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
   var seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
   // Display the result in the element with id="demo"
-  document.getElementById("demo").innerHTML = days + "d " + hours + "h "
+  // document.getElementById("demo").innerHTML = days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
+  document.getElementById("demo").innerHTML = hours + "h "
   + minutes + "m " + seconds + "s ";
 
   // If the count down is finished, write some text 
