--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!-- Display the countdown timer in an element -->
-<p id="title"><font size="48">Countdown Timer to Ade's Holiday...</font></p>
-<p id="demo"></p>
+<p id="title">
+  <font size="48">
+    Countdown Timer to Ade's Holiday...
+  </font>
+</p>
+
+<p id="demo">
+  <font size="100"></font>
+</p>
 
 <script>
 // Set the date we're counting down to
