--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ var x = setInterval(function() {
 
   // Display the result in the element with id="demo"
   // document.getElementById("demo").innerHTML = days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
-  document.getElementById("demo").innerHTML = hours + "h "
-  + minutes + "m " + seconds + "s ";
+  //document.getElementById("demo").innerHTML = hours + "h "
+  //+ minutes + "m " + seconds + "s ";
 
   // If the count down is finished, write some text 
   if (distance < 0) {
