--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </font>
 </p>
 
-<p id="demo" style="font-size=:100px";></p>
+<p id="demo"></p>
 
 <script>
 // Set the date we're counting down to
@@ -28,7 +28,9 @@ var x = setInterval(function() {
 
   // Display the result in the element with id="demo"
   // document.getElementById("demo").innerHTML = days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
-  document.getElementById("demo").innerHTML = hours + "h " + minutes + "m " + seconds + "s ";
+  var output = document.getElementById("demo");
+  output.style.fontSize = "400px";
+  output.innerHTML = hours + "h " + minutes + "m " + seconds + "s ";
 
   // If the count down is finished, write some text 
   if (distance < 0) {
