--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@ var x = setInterval(function() {
   // If the count down is finished, write some text 
   if (distance < 0) {
     clearInterval(x);
-    document.getElementById("demo").innerHTML = "EXPIRED";
+    document.getElementById("demo").innerHTML = "WOOHOO!!!! It's holiday time!!!!";
   }
 
   if (distanceK < 0) {
     clearInterval(x);
-    document.getElementById("realDeal").innerHTML = "EXPIRED";
+    document.getElementById("realDeal").innerHTML = "WOOHOO!!!! It's holiday time!!!! <br> Lithuania here I come!!!";
   }
 }, 1000);
 </script>
